# webview-minesweeper

./: .gitignore  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  build.sh  run.sh
minesweeper-backend/: Cargo.toml  build.rs
minesweeper-backend/src/: lib.rs  main.rs
minesweeper-backend/src/common/: mod.rs  vec2d.rs
minesweeper-backend/src/engine/: minesweeper.rs  mod.rs
minesweeper-ui/: .gitignore
minesweeper-ui/src/: Main.elm
